--- a/app/views/orders/address.html.erb
+++ b/app/views/orders/address.html.erb
@@ -1,22 +1,44 @@
 <%= render partial: 'header' %>
 
-<div class="container row">
-  <div class="col l8">
-  <span id="opener">open addresss form</span>
-    <div id="new-address" class="modal">
-        <div class="modal-content">
-        <%= render partial: 'address_form' %>
-        </div>
+<div class="container row all-addresses">
+  <% @user_addresses.each do |address| %>
+  <%= form_tag({controller: "orders", action: "summary"}, method: "post") do %>
+  <div class="col l4">
+    <div class="user-address">
+
+      <div class="address-name">
+        <%= address.name %>
+      </div>
+
+      <div class="address-display">
+        <%= address.address %>, <%= address.city %><br> near <%= address.landmark %>
+      </div>
+
+      <div class="address-display">
+          <%= address.phone %>
+      </div>
+
+      <div class="address-display">
+        <%= address.state %>, <%= address.country %>
+      </div>
+      <div class="address-display">
+        <%= hidden_field_tag :address_id, address.id %>
+        <%= submit_tag "Use this address", class: "btn btn-flat full-submit" %>
+        <% end %>
+      </div>
     </div>
   </div>
-  <div class="col l4">
-    <div>
-      <% @user_addresses.each do |address| %>
-      <div class="user-address row">
-       <span><%= address.state %></span>
-     </div>
-     <% end %>
-   </div>
- </div>
+  <% end %>
+</div>
+
+<div class="container row">
+  <div class="col l8">
+    <span id="opener">Use a New Address</span>
+    <div id="new-address" class="modal">
+      <div class="modal-content">
+        <%= render partial: 'address_form' %>
+      </div>
+    </div>
+  </div>
 </div>
 <%= render partial: 'footer' %>
