--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -99,7 +99,6 @@
   font-weight: normal;
 }
 
-<<<<<<< c18712c921859c080c9f1818c3d243995c386ee9
 .close-review {
   color: $my-black;
   font-size: 1em;
@@ -188,13 +187,12 @@
 }
 
 .user-address {
-  border: 3px solid #efefef;
+  border: 3px solid $grey-border;
   height: auto;
-  margin-top: 5em;
+  margin-bottom: 2em;
 }
 
 .all-addresses {
-  border: 1px solid black;
   width: 80% !important;
 }
 
@@ -203,7 +201,7 @@
 }
 
 .address-name {
-  border-bottom: 1px solid #e8e8e8;
+  border-bottom: 1px solid $bottom-border;
   font-style: 'ProximaNova',sans-serif,Arial !important;
   font-weight: bold;
   padding: 0.8em;
@@ -211,9 +209,13 @@
 }
 
 .address-display {
-    border-bottom: 1px dotted #e8e8e8;
-    font-size: 1em;
-    font-style: 'ProximaNova',sans-serif,Arial !important;
-    padding: 0.8em;
+  border-bottom: 1px dotted $bottom-border;
+  font-size: 1em;
+  font-style: $section-font !important;
+  padding: 0.8em;
+}
 
+.new-form-button {
+  padding: 1em 0 2em;
+  text-align: center;
 }
