--- a/app/views/orders/_address_form.html.erb
+++ b/app/views/orders/_address_form.html.erb
@@ -2,7 +2,7 @@
   <h5>
     Fill in the delivery information
   </h5>
-
+  <a  class="close-review" href="#"><i class="fa fa-times"></i></a>
   <%= form_tag({controller: "orders", action: "summary"}, method: "post") do %>
   <%= hidden_field_tag :user_id, current_user.id %>
   <div class="row">
