--- a/app/views/orders/address.html.erb
+++ b/app/views/orders/address.html.erb
@@ -1,44 +1,12 @@
 <%= render partial: 'header' %>
-
-<div class="container row all-addresses">
-  <% @user_addresses.each do |address| %>
-  <%= form_tag({controller: "orders", action: "summary"}, method: "post") do %>
-  <div class="col l4">
-    <div class="user-address">
-
-      <div class="address-name">
-        <%= address.name %>
-      </div>
-
-      <div class="address-display">
-        <%= address.address %>, <%= address.city %><br> near <%= address.landmark %>
-      </div>
-
-      <div class="address-display">
-          <%= address.phone %>
-      </div>
-
-      <div class="address-display">
-        <%= address.state %>, <%= address.country %>
-      </div>
-      <div class="address-display">
-        <%= hidden_field_tag :address_id, address.id %>
-        <%= submit_tag "Use this address", class: "btn btn-flat full-submit" %>
-        <% end %>
-      </div>
-    </div>
-  </div>
-  <% end %>
+<%= check_address_exist %>
+<div class="new-form-button">
+  <button id="opener" class="btn btn-flat">Create a New Address</button>
 </div>
-
-<div class="container row">
-  <div class="col l8">
-    <span id="opener">Use a New Address</span>
-    <div id="new-address" class="modal">
+</div>
+<div id="new-address" class="modal">
       <div class="modal-content">
         <%= render partial: 'address_form' %>
       </div>
     </div>
-  </div>
-</div>
 <%= render partial: 'footer' %>
