feat (order mailer spec): write test for order mailer

--- a/app/views/order_mailer/confirmation_email.txt.erb
+++ b/app/views/order_mailer/confirmation_email.txt.erb
@@ -1,1 +1,2 @@
-Your orders has been succesfully placed.
+Your orders has been succesfully placed. You can check the details of this and other orders
+<%= link_to "here", past_orders_url %>.
