--- a/app/views/order_mailer/confirmation_email.html.erb
+++ b/app/views/order_mailer/confirmation_email.html.erb
@@ -1,3 +1,6 @@
 <div>
-  <p>Your orders has been succesfully placed.</p>
+  <p>
+    Your orders has been succesfully placed. You can check the details of this and other orders
+     <%= link_to "here", past_orders_url %>.
+  </p>
 </div>
