--- a/app/views/order_mailer/confirmation_email.txt.erb
+++ b/app/views/order_mailer/confirmation_email.txt.erb
@@ -1,2 +1,2 @@
-Your orders has been succesfully placed. You can check the details of this and other orders
+Your order has been successfully placed. You can check the details of this and other orders
 <%= link_to "here", past_orders_url %>.
