fix(checkout): remove unwanted text display
remove total amount text being displayed at the top of the summary div, also remove hyphen being displayed after empty button

closes #114857305

--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -12,9 +12,9 @@
 }
 
 .empty-cart-btn {
-  color: $pure-red;
   background-color: transparent;
   box-shadow: none;
+  color: $google-red;
   font-size: 12px;
 }
 
