--- a/app/views/application/_cart_dropdown.html.erb
+++ b/app/views/application/_cart_dropdown.html.erb
@@ -27,7 +27,7 @@
                 <div class='col l3' id='cart-price'><%= product.price %></div>
                 <div class='col l1 del' id=<%= product.id %>>
                   <%= link_to delete_order_item_path(product.id), remote: true do %>
-                    <i class='fa fa-times red-text'></i>
+                    <i class='fa fa-times red-color-text'></i>
                   <% end %></div>
               </div>
 
