--- a/app/views/carts/_order_items_form.html.erb
+++ b/app/views/carts/_order_items_form.html.erb
@@ -33,7 +33,7 @@
           <%= link_to "Update", "#", class: "update-quantity-link", "data-product-id" => product.id %>
         </div>
         <div class="col l2 center-align">&#8358;<%= product.price.to_i * i.object.quantity.to_i %></div>
-        <%= link_to delete_order_item_path(product.id), remote: true, title: "Delete", class: "row red-text col l1 delete-from-cart" do %>
+        <%= link_to delete_order_item_path(product.id), remote: true, title: "Delete", class: "row red-color-text col l1 delete-from-cart" do %>
           <i class="small material-icons col l1 ">delete</i>
         <% end %>
       </div>
