--- a/app/views/wishlist/_wishlist_product.html.erb
+++ b/app/views/wishlist/_wishlist_product.html.erb
@@ -9,6 +9,6 @@
     <% end %>
     <span class="col l2"><%= wishproduct.created_at.strftime('%d/%m/%y') %></span>
 		<span class="col l1">&#8358;<%= product.price %></span>
-		<a href="#" data-wishlist-id='<%= wishproduct.id %>' title="Delete" class="row red-text col l1 delete-from-wishlist"><i class="small material-icons col l1">delete</i></a>
+		<a href="#" data-wishlist-id='<%= wishproduct.id %>' title="Delete" class="row red-color-text col l1 delete-from-wishlist"><i class="small material-icons col l1">delete</i></a>
 	</div>
 </div>
