--- a/app/views/orders/summary.html.erb
+++ b/app/views/orders/summary.html.erb
@@ -52,7 +52,7 @@
 
         <% total_amount = 0 %>
         <% @order.order_items.each do |order_item| %>
-          <%= total_amount += order_item.product.price.to_i * order_item.quantity.to_i %>
+          <% total_amount += order_item.product.price.to_i * order_item.quantity.to_i %>
           <tr>
             <td><%= image_tag order_item.product.product_image_links.first.link_name, width: "50px" %></td>
             <td><span class="col l2"><%= order_item.product.name %></span></td>
