--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -18,25 +18,17 @@
           </div>
         </div>
       </div>
-
-      <div class="shares">
         <div class="row">
-          <div class="col s4">Share</div>
-          <div class="col s2">
-
-            <a href="#" title="Facebook"><i class="fa fa-facebook my-icons product-page"></i></a>
+          <div class="col s1">
+            <a href="#" title="Facebook"><i class="fa fa-facebook-square"></i></a>
           </div>
-          <div class="col s2">
-            <a href="#" title="Twitter"><i class="fa fa-twitter my-icons product-page"></i></a>
+          <div class="col s1">
+            <a href="#" title="Twitter"><i class="fa fa-twitter-square"></i></a>
           </div>
-          <div class="col s2">
-            <a href="#" title="Instagram"><i class="fa fa-instagram my-icons product-page"></i></a>
-          </div>
-          <div class="col s2">
-            <a href="#" title="Pinterest"><i class="fa fa-pinterest-p my-icons product-page"></i></a>
+          <div class="col s1">
+            <a href="#" title="Google"><i class="fa fa-google-plus-square"></i></a>
           </div>
         </div>
-      </div>
 
     </div>
 
