refactor(order model): add dependent destroy to order model association with order_item

--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -187,6 +187,18 @@
   color: $my-white;
 }
 
+.cancel-button {
+  font-size: 0.7em;
+  height: 3em;
+  line-height: 3.2em;
+  padding-left: 2.2em;
+}
+
+.review-button:hover {
+  color: $my-white;
+}
+
+
 .user-address {
   border: 3px solid $grey-border;
   height: auto;
