--- a/app/views/orders/_order_details.html.erb
+++ b/app/views/orders/_order_details.html.erb
@@ -20,6 +20,7 @@
       <%= order.user.last_name %></span>
       <span class="shipping-address">
       <%= order.address.address %> </div></span>
+      <%= link_to "Cancel Order", "/", class: "btn cancel-button btn-flat"%>
     </div>
   </div>
 
