test(delivery tracking): complete tests for delivery tracking

--- a/app/views/orders/past_orders.html.erb
+++ b/app/views/orders/past_orders.html.erb
@@ -3,7 +3,7 @@
   <div class="row orders present center">
     <h4>Past Orders</h4>
   </div>
-
+  <%= render "orders/cancel_order_toast" %>
   <%= order_page %>
 </div>
 <%= render "footer" %>
