feat(share product): implement twitter button
design and implement twitter button to share product on twitter

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -19,6 +19,17 @@
         </div>
       </div>
         <div class="row">
+          <a class="twitter-share-button"
+            href="https://twitter.com/share"
+            data-size="large"
+            data-related="twitterapi,twitter"
+            data-hashtags="GetMyShop"
+          >
+          Share
+          </a>
+
+
+
           <div class="col s1">
             <a href="#" title="Facebook"><i class="fa fa-facebook-square"></i></a>
           </div>
