--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -16,6 +16,7 @@ $section-font: 'ProximaNova', sans-serif, Arial;
 $rating-label:"Roboto", sans-serif;
 $shadow-color: rgba(0, 0, 0, 0.75);
 $facebook-blue: #3b5998;
+$facebook-deep-blue:#4c67a1;
 $twitter-blue: #4099ff;
 $instagram-red: #3f729b;
 $pinterest-red: #c92228;
@@ -29,6 +30,7 @@ $black: #000000;
 $light-gray: #e0e0e0;
 $pale-orange: #fff4e1;
 $dove-gray: #666666;
+$deep-blue: #1c376d;
 $c-gray: #cccccc;
 $bg-grey: #ebebeb;
 $grey-notice: #212121;
