--- a/app/views/application/_user_profile.html.erb
+++ b/app/views/application/_user_profile.html.erb
@@ -1,6 +1,6 @@
 <span class="user-profile">
   <ul>
-    <li><%= link_to "Profile", "#" %></li>
+    <li><%= link_to "My Account", "#" %></li>
     <li><%= link_to "Past Orders", past_orders_path %></li>
     <li><%= link_to "Add more", "#" %></li>
   </ul>
