feat(share product): design and implement google button
design and implement google button to share product on google plus

[finishes #116030893]

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -39,3 +39,5 @@ $very-pale-gray: #f4f4f4;
 $dark-gray: #bcbcbc;
 $gold: #eeaa00;
 $grey-label: #9e9e9e;
+$twitter-blue: #00aced;
+$deep-twitter-blue: #00a8e6;
