--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -22,18 +22,22 @@
         <div class="row">
           <div class="col s2">
             <div class="tweet">
-              <a class="twitter-share-button"
-                href="https://twitter.com/share"
-                data-size="large"
-                data-related="twitterapi,twitter"
-                data-hashtags="GetMyShop">
+              <a id="twitter-share" target="blank">
+                <button class="btn waves-effect twitter-button social-button"><i class="fa fa-twitter"></i>Tweet</button>
               </a>
             </div>
           </div>
-          <div class="col s3">
+          <div class="col s2">
             <div>
-              <a href="#"  id="facebook-share" class="btn facebook-button" target="blank"><span class="facebook-f">&nbsp;f&nbsp;</span> <span class="facebook-share">Share</span></a>
+              <a href="#"  id="facebook-share" class="btn facebook-button social-button" target="blank"><span class="facebook-f">&nbsp;f&nbsp;</span> <span class="facebook-share">Share</span></a>
             </div>
+          </div>
+          <div class="col s3">
+          <a  href="#" id="google-share" target="blank"><button class="btn waves-effect google-button social-button"><i class="fa fa-google-plus google-logo"></i>Share</button></a>
+          </div>
+          <div class="col s3">
+
+
           </div>
         </div>
     </div>
