--- a/app/views/orders/address.html.erb
+++ b/app/views/orders/address.html.erb
@@ -1,12 +1,14 @@
 <%= render partial: 'header' %>
-<%= check_address_exist %>
-<div class="new-form-button">
-  <button id="opener" class="btn btn-flat">Create a New Address</button>
-</div>
-</div>
-<div id="new-address" class="modal">
-      <div class="modal-content">
-        <%= render partial: 'address_form' %>
-      </div>
+<div class="contain">
+  <%= check_address_exist %>
+  <div class="new-form-button">
+    <button id="opener" class="btn btn-flat">Create a New Address</button>
+  </div>
+  </div>
+  <div id="new-address" class="modal">
+    <div class="modal-content">
+      <%= render partial: 'address_form' %>
     </div>
+  </div>
+</div>
 <%= render partial: 'footer' %>
