--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,37 +3,7 @@
   <div class="container">
     <div class="row">
       <div class= "col s3">
-        <div class="account-sidebar">
-          <a href="#">
-            <div class="sidebar-items">
-              <i class="fa fa-user" aria-hidden="true"></i><span>&nbsp;&nbsp;My Profile</span>
-            </div>
-          </a>
-
-          <a href="#">
-            <div class="sidebar-items">
-              <i class="fa fa-envelope" aria-hidden="true"></i><span>&nbsp;&nbsp;Manage Address</span>
-            </div>
-          </a>
-
-          <%= link_to past_orders_path do %>
-            <div class="sidebar-items">
-              <i class="fa fa-list" aria-hidden="true"></i><span>&nbsp;&nbsp;Past Orders</span>
-            </div>
-          <% end %>
-
-          <%= link_to wishlist_index_path do %>
-            <div class="sidebar-items">
-              <i class="fa fa-heart" aria-hidden="true"></i><span>&nbsp;&nbsp;My Wishlist</span>
-            </div>
-          <% end %>
-
-          <a href="#">
-            <div class="sidebar-items">
-              <i class="fa fa-trash" aria-hidden="true"></i><span>&nbsp;&nbsp;Delete Account</span>
-            </div>
-          </a>
-        </div>
+           <%= render "account_side_bar" %>
       </div>
        <div class= "col s9">
         <div class="profile">
