feat(share product): add metamagic gem to create meta tags
Add metamagic gem to generate meta tags so facebook can pick the correct product image and description

[finishes 116030893]

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <% if @product %>
-    <% if current_page?(:controller => "products", :action => "show", :id => @product.id) %>
-      <meta property="og:image" content=<%= @product.product_image_links.first.link_name %> />
-      <meta property="og:description" content=<%= @product.description %> />
-    <% end %>
-  <% end %>
+  <%= metamagic %>
+
   <title>Getmyshop</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
