--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,3 +1,5 @@
+<% meta og: { image: @product.product_image_links.first.link_name } %>
+<% meta og: { description: @product.description } %>
 <%= render "header" %>
 <div id="fb-root"></div>
 <div class="container-large product-description-body">
