--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -163,13 +163,17 @@ hr {
 }
 
 .social-button {
-  height: 2em;
   line-height: 2em;
+}
+
+.facebook-button:focus {
+  background-color: $facebook-deep-blue;
 }
 
 .facebook-button {
   background-color: $facebook-deep-blue;
   border-radius: 0.2em;
+  height: 1.9em;
   padding-left: 0.4em;
   padding-right: 0.1em;
   text-align: left;
@@ -188,31 +192,41 @@ hr {
 }
 
 .facebook-share {
-  font-size: 0.9em;
+  font-size: 0.8em;
   font-weight: normal;
 }
 
 .twitter-button {
   background-color: $twitter-blue;
   border-radius: 0.2em;
-  font-size: 0.9em;
-  padding-left: 2.3em !important;
+  font-size: 0.8em;
+  height: 2.4em;
+  padding-left: 2.8em !important;
   padding-right: 3.4em !important;
   text-decoration: none;
   text-transform: none;
-  width: 5.14em;
+  width: 5em;
+}
+
+.twitter-button:focus {
+  background-color: $twitter-blue;
+  color: $my-white;
 }
 
 .google-button {
-  background-color: $my-white;
-  color: $my-black;
+  background-color: $google-red;
+  color: $my-white;
   font-size: 0.7em;
   height: 2.7em;
   padding-left: 3.3em !important;
   padding-right: 3.4em !important;
   text-decoration: none;
   text-transform: none;
-  width: 5.14em;
+  width: 5.18em;
+}
+
+.google-button:focus {
+  background-color: $google-red;
 }
 
 .twitter-button:hover {
@@ -220,10 +234,10 @@ hr {
 }
 
 .google-button:hover {
-  background-color: $my-white;
+  background-color: $google-red;
 }
 
 .google-logo {
-  color: $google-red;
+  color: $my-white;
   font-size: 1.4em !important;
 }
