--- a/app/views/orders/past_orders.html.erb
+++ b/app/views/orders/past_orders.html.erb
@@ -1,9 +1,22 @@
 <%= render "header" %>
-<div id="full-order-page" class="full-order-page">
-  <div class="row orders present center">
-    <h4>Past Orders</h4>
+<div class="signin-box">
+  <div class="container account-container">
+    <div class="row">
+      <div class= "col s3">
+        <%= render "users/account_side_bar" %>
+      </div>
+      <div class= "col s9">
+        <div class="profile">
+          <div class="result-header">
+            PAST ORDERS
+          </div>
+          <div class="row profile-fields">
+            <%= order_page %>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <%= render "orders/cancel_order_toast" %>
-  <%= order_page %>
 </div>
 <%= render "footer" %>
+
