--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
 <%= render "header" %>
 <div class="signin-box">
-  <div class="container">
+  <div class="container account-container">
     <div class="row">
       <div class= "col s3">
            <%= render "account_side_bar" %>
