--- a/app/views/wishlist/index.html.erb
+++ b/app/views/wishlist/index.html.erb
@@ -1,13 +1,19 @@
 <%= render "header" %>
-<div class= "row-break"></div>
-<div class="row container-trim">
-  <div class="col s12 m12 l12">
-    <div id="wish-products-list">
-      <div id="wishlist-container">
-      <h5 class="center">My Wishlist</h5>
-        <div class="pad-small-bottom"></div>
-        <%= wishlist_display %>
-        <br />
+<div class="signin-box">
+  <div class="container account-container">
+    <div class="row">
+      <div class= "col s3">
+        <%= render "users/account_side_bar" %>
+      </div>
+      <div class= "col s9">
+        <div class="profile">
+          <div class="result-header">
+            MY WISHLIST
+          </div>
+          <div class="wishlist-fields">
+            <%= wishlist_display %>
+          </div>
+        </div>
       </div>
     </div>
   </div>
