--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -13,9 +13,13 @@
           <div class="slider">
             <ul class="slides">
               <% @product.product_image_links.each do |link| %>
+              <div class="wm-zoom-container my-zoom">
+                <div class="wm-zoom-box">
               <li class="slide-item">
-                <%= image_tag link.link_name %>
+                <%= image_tag link.link_name, class: "wm-zoom-default-img", data: { hight_src: link.link_name } %>
               </li>
+            </div>
+          </div>
               <% end %>
             </ul>
           </div>
